force-app/main/default/objects/Branch__c/fields/No_of_seats__c.field-meta.xml
<CustomField>
    <fullName>No_of_seats__c</fullName>
    <label>No of seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>