force-app/main/default/objects/Branch__c/fields/Seats_alloted__c.field-meta.xml
<CustomField>
    <fullName>Seats_alloted__c</fullName>
    <label>Seats alloted</label>
    <summaryForeignKey>Student__c.Branch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>