force-app/main/default/objects/Branch__c/fields/Seats_available__c.field-meta.xml
<CustomField>
    <fullName>Seats_available__c</fullName>
    <formula>No_of_seats__c -  Seats_alloted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>