force-app/main/default/objects/Branch__c/validationRules/Seats_alloted.validationRule-meta.xml
<ValidationRule>
    <fullName>Seats_alloted</fullName>
    <active>true</active>
    <errorConditionFormula>Seats_alloted__c  &gt; 4</errorConditionFormula>
    <errorMessage>No seats available in selected department</errorMessage>
</ValidationRule>