force-app/main/default/objects/Branch__c/listViews/sample.listView-meta.xml
<ListView>
    <fullName>sample</fullName>
    <columns>NAME</columns>
    <columns>No_of_seats__c</columns>
    <columns>Seats_available__c</columns>
    <columns>Fee__c</columns>
    <filterScope>Mine</filterScope>
    <label>sample</label>
</ListView>